WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69123
[GTK] The process freezes when you right click on windowless Flash
https://bugs.webkit.org/show_bug.cgi?id=69123
Summary
[GTK] The process freezes when you right click on windowless Flash
Martin Robinson
Reported
2011-09-29 21:12:26 PDT
Chromium and Qt had to work around this same issue. See:
https://bugs.webkit.org/show_bug.cgi?id=47545
Attachments
Patch
(6.42 KB, patch)
2011-09-29 22:40 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Patch using pluginInfo() to get plugin mime type
(5.98 KB, patch)
2011-09-30 02:04 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Patch
(6.46 KB, patch)
2011-10-27 18:22 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Fix build
(6.48 KB, patch)
2011-10-28 00:26 PDT
,
Martin Robinson
xan.lopez
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-09-29 22:40:49 PDT
Created
attachment 109252
[details]
Patch
Carlos Garcia Campos
Comment 2
2011-09-30 01:38:16 PDT
Comment on
attachment 109252
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109252&action=review
> Source/WebKit2/Shared/Plugins/Netscape/x11/NetscapePluginModuleX11.cpp:177 > + // FIXME: Calling getPluginInfo at this point causes a segmentation fault. Once > + // that's fixed this should be modified to check the mime type.
See bug
https://bugs.webkit.org/show_bug.cgi?id=69139
Carlos Garcia Campos
Comment 3
2011-09-30 02:00:45 PDT
Comment on
attachment 109252
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109252&action=review
> Source/WebCore/ChangeLog:14 > + (WebCore::PluginPackage::determineQuirks): Always activate the windowless > + Flash quirk if on x86_64 and X11.
I'm confused, the problem is with windowed or windowless plugins? Bug title says windowed.
Carlos Garcia Campos
Comment 4
2011-09-30 02:04:33 PDT
Created
attachment 109268
[details]
Patch using pluginInfo() to get plugin mime type It's martin's patch but using pluginInfo to get plugin mime type in determineQuirks(). It depends on bug
https://bugs.webkit.org/show_bug.cgi?id=69139
Gustavo Noronha (kov)
Comment 5
2011-09-30 02:15:29 PDT
Comment on
attachment 109268
[details]
Patch using pluginInfo() to get plugin mime type
Attachment 109268
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/9888759
Martin Robinson
Comment 6
2011-10-27 18:22:44 PDT
Created
attachment 112801
[details]
Patch
Martin Robinson
Comment 7
2011-10-27 18:23:40 PDT
I updated the patch to fix the bug title. Philippe, do you mind reviewing this one. We should really get this into the stable branch ASAP.
Collabora GTK+ EWS bot
Comment 8
2011-10-27 23:14:09 PDT
Comment on
attachment 112801
[details]
Patch
Attachment 112801
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/10238114
Martin Robinson
Comment 9
2011-10-28 00:26:56 PDT
Created
attachment 112822
[details]
Fix build
Xan Lopez
Comment 10
2011-11-16 10:20:03 PST
Comment on
attachment 112822
[details]
Fix build View in context:
https://bugs.webkit.org/attachment.cgi?id=112822&action=review
Looks good to me minus the nits.
> Source/WebKit2/ChangeLog:15 > + events while in windowed mode.
I think you mean windowless here.
> Source/WebKit2/Shared/Plugins/Netscape/x11/NetscapePluginModuleX11.cpp:187 > +#endif
If this only affects some versions of the plugin shouldn't you check for that? Eg, if it's fixed in 11 or whatever, don't disable right click then.
Martin Robinson
Comment 11
2011-11-17 21:56:17 PST
(In reply to
comment #10
)
> > Source/WebKit2/Shared/Plugins/Netscape/x11/NetscapePluginModuleX11.cpp:187 > > +#endif > > If this only affects some versions of the plugin shouldn't you check for that? Eg, if it's fixed in 11 or whatever, don't disable right click then.
From what I understand this only works in versions of Flash that are quite old now and contain security vulnerabilties. When a new versions of Flash appear that fixes this, I think it makes sense to allow it, but at this point I'm not sure if those old versions of Flash are worth consideration.
Martin Robinson
Comment 12
2011-11-17 21:57:05 PST
(In reply to
comment #11
)
> > If this only affects some versions of the plugin shouldn't you check for that? Eg, if it's fixed in 11 or whatever, don't disable right click then. > > From what I understand this only works in versions of Flash that are quite old now and contain security vulnerabilties. When a new versions of Flash appear that fixes this, I think it makes sense to allow it, but at this point I'm not sure if those old versions of Flash are worth consideration.
I forgot to say that I'll land this now and, if you like, I can open a new bug addressing supporting right-click menus for older Flash versions.
Martin Robinson
Comment 13
2011-11-17 22:09:32 PST
Committed
r100725
: <
http://trac.webkit.org/changeset/100725
>
Martin Robinson
Comment 14
2011-11-17 22:10:05 PST
(In reply to
comment #10
)
> Source/WebKit2/ChangeLog:15 > > + events while in windowed mode. > > I think you mean windowless here.
Thanks for the review! Landed this with this fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug